# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: app.py  parser.py
page_analyzer/database/: check_repository.py  db.py  url_repository.py
page_analyzer/services/: url_normalizer.py
page_analyzer/templates/: base.html  index.html  layout.html  url.html  urls.html
